--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
+    "hijri-date": "^0.2.2",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
+    "moment-hijri": "^3.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
